RESOLVED FIXED235614
globalThis.queueMicrotask() should report thrown exceptions
https://bugs.webkit.org/show_bug.cgi?id=235614
Summary globalThis.queueMicrotask() should report thrown exceptions
Alexey Shvayka
Reported 2022-01-25 15:27:31 PST
globalThis.queueMicrotask() should report thrown exceptions
Attachments
Patch (22.95 KB, patch)
2022-01-25 15:32 PST, Alexey Shvayka
no flags
Patch (32.35 KB, patch)
2022-01-25 19:25 PST, Alexey Shvayka
no flags
Alexey Shvayka
Comment 1 2022-01-25 15:32:32 PST
Geoffrey Garen
Comment 2 2022-01-25 15:44:32 PST
Comment on attachment 449973 [details] Patch r=me
Mark Lam
Comment 3 2022-01-25 15:53:03 PST
Comment on attachment 449973 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=449973&action=review > Source/WebCore/bindings/js/JSDOMMicrotask.cpp:39 > +class JSDOMMicrotask final : public Microtask { WTF_MAKE_FAST_ALLOCATED?
Mark Lam
Comment 4 2022-01-25 15:54:36 PST
Comment on attachment 449973 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=449973&action=review >> Source/WebCore/bindings/js/JSDOMMicrotask.cpp:39 >> +class JSDOMMicrotask final : public Microtask { > > WTF_MAKE_FAST_ALLOCATED? Nevermind. Since this ultimately inherits from RefCounted, it is already WTF_MAKE_FAST_ALLOCATED.
Alexey Shvayka
Comment 5 2022-01-25 19:25:17 PST
Created attachment 449992 [details] Patch Skip SW test on mac-wk1, reset expectations for inspector test, and remove now unused createJSMicrotask() overload.
Alexey Shvayka
Comment 6 2022-01-26 12:10:23 PST
Radar WebKit Bug Importer
Comment 7 2022-01-26 12:11:20 PST
Alexey Shvayka
Comment 8 2022-01-26 12:12:12 PST
Thank you both!
Note You need to log in before you can comment on or make changes to this bug.